--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,11 @@
   <packaging>jar</packaging>
   <name>embeddedTomcatSample Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <properties>
-    <tomcat.version>8.5.38</tomcat.version>
-  </properties>
+    <properties>
+        <tomcat.version>8.5.38</tomcat.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
   <dependencies>
     <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
